@@ -824,6 +824,12 @@ static SyscallTableEntry syscall_main_table[] = {
    LINXY (__NR_io_uring_setup,         sys_io_uring_setup),
    LINXY (__NR_io_uring_enter,         sys_io_uring_enter),
    LINXY (__NR_io_uring_register,      sys_io_uring_register),
+   LINXY (__NR_open_tree,              sys_open_tree),
+   LINX_ (__NR_move_mount,             sys_move_mount),
+   LINXY (__NR_fsopen,                 sys_fsopen),
+   LINX_ (__NR_fsconfig,               sys_fsconfig),
+   LINXY (__NR_fsmount,                sys_fsmount),
+   LINXY (__NR_fspick,                 sys_fspick),
    LINXY (__NR_pidfd_open,             sys_pidfd_open),
    GENX_ (__NR_clone3,                 sys_ni_syscall),
    LINXY (__NR_close_range,            sys_close_range),
