@@ -6,6 +6,7 @@ Branch 3.24
 The following bugs have been fixed or resolved on this branch.
 
 489913  WARNING: unhandled amd64-linux syscall: 444 (landlock_create_ruleset)
+494246  syscall fsopen not wrapped
 
 To see details of a given bug, visit
   https://bugs.kde.org/show_bug.cgi?id=XXXXXX
